# sdks

./: .gitignore  DOCUSEAURUS-DOCS-MIGRATION.md  RBAC_PROGRESS.md  README.md
.github/: PUBLISH_SDK_SECRETS.md
.github/workflows/: mirror-subtrees.yml  publish-sdks.yml
apps/docs/: .gitignore  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
apps/docs/docs/: intro.mdx
apps/docs/docs/api/: _category_.yml
apps/docs/docs/frameworks/: _category_.yml  nextjs.mdx
apps/docs/docs/guides/: authentication.mdx  rate-limits.mdx  webhooks.mdx
apps/docs/docs/sdks/: _category_.yml  dart.mdx  dotnet.mdx  elixir.mdx  go.mdx  index.mdx  java.mdx  kotlin.mdx  php.mdx  python.mdx  ruby.mdx  rust.mdx  swift.mdx  typescript.mdx
apps/docs/scripts/: write-openapi.mjs
apps/docs/src/components/: ApiRequest.tsx  AuthHeader.tsx  Callout.module.css  Callout.tsx  CodeSampleTabs.tsx  SdkInstallTabs.tsx
apps/docs/src/css/: custom.css
apps/docs/src/theme/: MDXComponents.tsx
scripts/: create-sdk-repos.ps1  create-sdk-repos.sh  push-sdks-all.ps1  push-sdks-all.sh  remotes.example.txt  sdk-version.mjs  subtree-push.ps1  subtree-push.sh
sdks/: PUBLISHING.md
sdks/cpp/: README.md
sdks/dart/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
sdks/dart/lib/: locksmith.dart  locksmith_dart.dart
sdks/dotnet/: Locksmith.Sdk.csproj  LocksmithClient.cs  README.md
sdks/elixir/: README.md  mix.exs
sdks/elixir/lib/: locksmith.ex
sdks/elixir/lib/locksmith/: client.ex  error.ex
sdks/go/: README.md  client.go  errors.go  go.mod
sdks/java/: README.md  pom.xml
sdks/kotlin/: README.md  build.gradle.kts  settings.gradle.kts
sdks/nextjs/: README.md  package-lock.json  package.json  tsconfig.json
sdks/nextjs/locksmith/: index.ts  passkey-button.tsx  powered-by.tsx  sign-in-form.tsx  sign-up-form.tsx  social-buttons.tsx  social-icons.tsx  totp-form.tsx
sdks/nextjs/locksmith/demo/: sign-in-demo.tsx  sign-up-demo.tsx  totp-demo.tsx
sdks/nextjs/src/: api-key.ts  error.ts  index.ts  types.ts
sdks/nextjs/src/client/: bff-client.ts  form-icons.tsx  form-shell.tsx  form-theme.ts  index.tsx  oauth-callback.tsx  oauth-sign-in-button.tsx  oidc-consent.tsx  passkey-button.tsx  powered-by.tsx  provider.tsx  sign-in-form.tsx  sign-up-form.tsx  social-buttons.tsx  social-icons.tsx  totp-form.tsx
sdks/nextjs/src/server/: index.ts  locksmith-server.ts  middleware.ts  route-handlers.ts
sdks/php/: README.md  composer.json
sdks/php/src/: LocksmithClient.php  LocksmithError.php
sdks/python/: README.md  pyproject.toml
sdks/python/src/locksmith/: __init__.py  client.py  errors.py  types.py
sdks/ruby/: README.md  locksmith-ruby.gemspec
sdks/ruby/lib/: locksmith.rb
sdks/ruby/lib/locksmith/: client.rb  error.rb  version.rb
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: lib.rs
sdks/swift/: Package.swift  README.md
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: apiKey.ts  client.ts  errors.ts  index.ts  types.ts
(+6 files in other folders)
