[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "locksmith-py"
version = "0.1.0"
description = "Python client for the Locksmith public auth API"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27,<0.29",
  "PyJWT[crypto]>=2.8,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.hatch.build.targets.wheel]
packages = ["src/locksmith"]

[tool.ruff]
line-length = 100
target-version = "py310"
