[package]
name = "locksmith"
version = "0.1.0"
edition = "2021"
description = "Client for the Locksmith public authentication API"
license = "MIT"
repository = "https://github.com/uselocksmith/locksmith"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
jsonwebtoken = "9"
urlencoding = "2"
